--- a/ecocode-rules-specifications/src/main/rules/ECVarInLoop/java/ECVarInLoop.asciidoc
+++ b/ecocode-rules-specifications/src/main/rules/ECVarInLoop/java/ECVarInLoop.asciidoc
@@ -11,7 +11,7 @@ for(int i = 0; i < 5; i++){
 ## Compliant Code Example
 
 ```java
-int x; // Compliant
+int x;
 for(int i = 0; i < 5; i++){
     x = i * 2;
 }
