--- a/ecocode-rules-specifications/src/main/rules/ECVarInLoop/java/ECVarInLoop.asciidoc
+++ b/ecocode-rules-specifications/src/main/rules/ECVarInLoop/java/ECVarInLoop.asciidoc
@@ -8,11 +8,28 @@ for(int i = 0; i < 5; i++){
 }
 ```
 
+```java
+ int j = 0;
+ while (j < 5) {
+    int y = j * 3;
+    j++;
+ }
+```
+
 ## Compliant Code Example
 
 ```java
 int x;
 for(int i = 0; i < 5; i++){
     x = i * 2;
+}
+```
+
+```java
+
+int y;
+while (j < 5) {
+    y = j * 3; // Compliant
+    j++;
 }
 ```
